# agary-backend

./: Cargo.toml  README.md
src/: main.rs
src/router/: mod.rs  response_models.rs  static_content_response.rs
