[package]
name = "axum-agary-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
derive = "1.0.0"
serde = { version="1.0.225", features=["derive"]}
serde_derive = "1.0.225"
tokio = { version="1.47.1", features=["full"] }
tower = "0.5.2"
tower-http = { version="0.6.6", features = ["full"] }
